Add Google optimize

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <!-- Google optimize -->
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-KM223N9"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6P4V3H70NT"></script>
     <script>
